# Assetment_winter_2025

Deeplearning/: tensor.py
cpp/: Rectangle.cpp  Stack.cpp  ThreadSafeQueue.cpp
cpp/communicate/: CMakeLists.txt
cpp/communicate/include/communicate/: link.hpp  protocol.hpp  uplink.hpp
cpp/communicate/src/: downlink.cpp  uplink.cpp
opencv/: main.cpp
opencv/ketchup_Packet/: CMakeLists.txt
opencv/ketchup_Packet/src/: main.cpp  sb.cpp
opencv/light/: CMakeLists.txt
opencv/light/src/: main.cpp
opencv/noise/src/: main.cpp
